# Enterprise-Project-Management-Platform

./: .env.example  .gitignore  ARCHITECTURE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/modules/administration/: models.py  permissions.py  repositories.py  router.py  schemas.py  services.py  validators.py
backend/app/modules/analytics/: models.py  permissions.py  repositories.py  router.py  schemas.py  services.py  validators.py
backend/app/modules/attachments/: models.py  permissions.py  repositories.py  router.py  schemas.py  services.py  validators.py
backend/app/modules/audit_logs/: models.py  permissions.py  repositories.py  router.py  schemas.py  services.py  validators.py
backend/app/modules/auth/: dependencies.py  models.py  oauth.py  permissions.py  repositories.py  router.py  schemas.py  security.py  seeds.py  services.py  validators.py
backend/app/modules/comments/: models.py  permissions.py  repositories.py  router.py  schemas.py  services.py  validators.py
backend/app/modules/dashboards/: models.py  permissions.py  repositories.py  router.py  schemas.py  services.py  validators.py
backend/app/modules/integrations/: models.py  permissions.py  repositories.py  router.py  schemas.py  services.py  validators.py
backend/app/services/: redis_service.py
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_initial.py
backend/tests/: conftest.py  test_auth.py  test_main.py  test_phase3.py
(+91 files in other folders)
